update analisa tabel

--- a/puskesmas_app/templates/analisa_grafik.html
+++ b/puskesmas_app/templates/analisa_grafik.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}Analisa Grafik{% endblock title %}
 {% block nav %}
     {% include 'snippets/nav.html' %}
@@ -28,7 +30,7 @@
                                 <ul class="nav nav-tabs">
                                     <li class="active"><a href="#proporsi" data-toggle="tab">Proporsi</a>
                                     </li>
-                                    <li><a href="#cakupan" data-toggle="tab">Cakupan</a>
+                                    <!--<li><a href="#cakupan" data-toggle="tab">Cakupan</a>-->
                                     </li>
                                 </ul>
     
@@ -36,24 +38,23 @@
                                 <div class="tab-content">
                                     <div class="tab-pane fade in active" id="proporsi">
                                         <h4>Proporsi</h4>
-                                        <div class="form-group">
-                                            <form method="POST" class="form-horizontal">
-                                                {% csrf_token %}
-                                                {{ form }}
-                                                <br/>
-                                                <button type="submit" class="btn btn-primary m-t">Tampilkan</button>
-                                            </form>
-                                        </div>
+                                        <form method="POST" >
+                                            <div class="form-group form-inline">
+                                            {% csrf_token %}
+                                            {{ form | crispy }}
+                                            </div>
+                                            <button type="submit" class="btn btn-primary m-t">Tampilkan</button>
+                                        </form>
                                         <div class="col-md-12">
                                             {% if request.POST %}
                                                 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
                                             {% endif %}
                                         </div>
                                     </div>
-                                    <div class="tab-pane fade" id="cakupan">
-                                        <h4>Cakupan</h4>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                    </div>
+                                    <!--<div class="tab-pane fade" id="cakupan">-->
+                                    <!--    <h4>Cakupan</h4>-->
+                                    <!--    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
+                                    <!--</div>-->
                                 </div>
                             </div>
                             <!-- /.panel-body -->
