--- a/puskesmas_app/templates/analisa_tabel.html
+++ b/puskesmas_app/templates/analisa_tabel.html
@@ -47,7 +47,7 @@
                                 <div class="tab-content">
                                     <div class="tab-pane fade in active" id="proporsi">
                                         <h4>Proporsi</h4>
-                                            
+                                            <p>catt  {{ tabel_categories }}</p>
                                             <form method="POST">
                                                 {% csrf_token %}
                                                 <div class="form-group form-inline">
@@ -64,33 +64,8 @@
                                                     </div>
                                                     <!-- /.panel-heading -->
                                                     <div class="panel-body">
-                                                        <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                                            <thead>
-                                                                <tr>
-                                                                    <th></th>
-                                                                    {% for data in tabel_data %}
-                                                                    <th>{{ data.name }}</th>
-                                                                    {% endfor %}
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                                {% for data1 in tabel_categories %}
-                                                                <tr> 
-                                                                    <td>{{ data1 }}</td>
-                                                                    {% for data in tabel_data %}
-                                                                        {% if jenis == 'wilayah' %}
-                                                                           <td>{{ data.data | safe }} {{ data.suffix | safe }}</td>
-                                                                        {%endif%}
-                                                                        
-                                                                        {% if jenis == 'jenis_kelamin' %}
-                                                                            <td>{{ data.data | safe }} {{ data.suffix | safe }}</td>
-                                                                        {%endif%}
-                                                                        
-                                                                    {% endfor %}
-                                                                </tr>
-                                                                {% endfor %}
-                                                            </tbody>
-                                                        </table>
+                                                        <table id="dataTables-example" class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" width="100%"></table>
+                                                        
                                                         <!-- /.table-responsive -->
                                                     </div>
                                                     <!-- /.panel-body -->
@@ -136,13 +111,27 @@
 
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
+    
+    var dataset = {{ tabel_data | safe }};
+    var judul_thead = [
+        {% for data in tabel_header %}
+        { title : "{{ data }}" },
+        {% endfor %}
+    ]
+    
+    
     $(document).ready(function() {
         $('#dataTables-example').DataTable({
             
+            data: dataset,
+            columns: judul_thead,
+            
             /* No ordering applied by DataTables during initialisation */
+            "lengthChange": false,
             "ordering": false,
             "order": [],
             "pageLength": 50,
+            "searching": false,
 
             
             responsive: true,
