--- a/puskesmas_app/templates/data_demografi_penduduk_htm.html
+++ b/puskesmas_app/templates/data_demografi_penduduk_htm.html
@@ -24,7 +24,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Basic Form Elements
+                            Input Demografi Penduduk
                         </div>
                         <div class="panel-body">
                             <div class="row">
