after sidang hasil revisi minus dekorasi dashboard depan

--- a/puskesmas_app/templates/rekapitulasi_fr_htm.html
+++ b/puskesmas_app/templates/rekapitulasi_fr_htm.html
@@ -35,7 +35,7 @@
                             <form method="POST" id="form_faktor_resiko">
                                 {% csrf_token %}
                                 <div class="pilih_tahun">
-                                <h3>Faktor Resiko PTM Tahun :
+                                <h3>Faktor Risiko PTM Tahun :
                                     <small><select ="{{ tahun }}" onchange="form_faktor_resiko.submit()" id="select_tahun" name="select_tahun">
                                       <option value="2015">2015</option>
                                       <option value="2016">2016</option>
@@ -59,8 +59,8 @@
                                     <thead>
                                         <tr>
                                             <th>No.</th>
-                                            <th>Jenis Faktor Resiko</th>
-                                            <th>Jumlah Kunjungan yang Beresiko</th>
+                                            <th>Jenis Faktor Risiko</th>
+                                            <th>Jumlah Kunjungan yang Berisiko</th>
                                             <th>Jumlah yang Diperiksa</th>
                                         </tr>
                                     </thead>
