--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -75,14 +75,14 @@
                             <a href="#"><i class="fa fa-flask fa-fw"></i> Pengolahan Data<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="{% url 'puskesmas_app:rekapitulasi_fr' %}"><i class="fa fa-th-list"></i> Rekapitulasi Faktor Resiko</a>
+                                    <a href="{% url 'puskesmas_app:rekapitulasi_fr' %}"><i class="fa fa-th-list"></i> Rekapitulasi Faktor Risiko</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
 
                         <li>
-                            <a href="#"><i class="fa fa-windows fa-fw"></i> Analisa / Penyajian<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-windows fa-fw"></i> Analisis / Penyajian<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="{% url 'puskesmas_app:analisa_tabel' %}"><i class="fa fa-table"></i> Analisa Tabel</a>
