add image to home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,8 @@
                 <div class="col-lg-12">
                 <h1>Selamat datang...</h1>
                 </div>
+                
+                <img src={% static 'img/home.jpg' %} class="img-responsive" alt="welcome home">
             </div>
 
         <!-- /#page-wrapper -->
